@@ -8,6 +8,10 @@
   * Raise an error when attempting to add paths that are not under the
     repository. (Jelmer Vernooĳ)
 
+  * Make `dulwich.archive` set the gzip header file modification time so that
+    archives created from the same Git tree are always identical.
+    (#577, Jonas Haag)
+
   IMPROVEMENTS
 
   * Enforce date field parsing consistency. This also add checks on
